# ReUnity

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  DATA_SOURCES.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  TODO_INTEGRATION.md  docker-compose.yml  paper_audit_complete.txt  reunity_standalone.py
.github/workflows/: ci.yml
data/index/: chunks.json  config.json  embeddings.npy
data/sample_docs/: 01_understanding_emotions.md  02_grounding_techniques.md  03_healthy_relationships.md  04_self_care.md  05_coping_strategies.md
data/sim_prompts/: protection_cases.jsonl  rag_cases.jsonl  state_router_cases.jsonl
docs/: API.md  ARCHITECTURE.md  COPILOT_SDK.md  DATASETS_AND_SIM_TESTS.md  FARAZ_SETUP.md  GPU_TRAINING.md  INTEGRATION_STATUS.md  RAG_SETUP.md  TROUBLESHOOTING.md
examples/: __init__.py  alter_aware_example.py  basic_usage.py
outputs/simulations/: SIMULATION_SUMMARY.md  simulation_results.json
paper/: fix_citations.py  reader_guide.tex  restructure_sections.py  reunity_complete_cleaned.bib  reunity_comprehensive.bib  reunity_publication.aux  reunity_publication.bbl  reunity_publication.bcf  reunity_publication.blg  reunity_publication.ist  reunity_publication.lof  reunity_publication.lot  reunity_publication.out  reunity_publication.run.xml  reunity_publication.tex  reunity_publication.toc  reunity_restructured.tex
reports/: sim_stage1_metrics.json  sim_stage2_prerag.json  sim_stage3_rag.json
reunity_ai_model/: README.md  REUNITY_COMPLETE_CODE_FOR_FARAZ.md  config.py  pyproject.toml  requirements.txt  reunity_standalone.py  utils.py
reunity_ai_model/alter/: __init__.py  alter_aware.py
reunity_ai_model/core/: entropy.py
reunity_ai_model/grounding/: techniques.py
reunity_ai_model/memory/: timeline_threading.py
reunity_ai_model/prerag/: absurdity_gap.py  query_gate.py
reunity_ai_model/protective/: pattern_recognizer.py  safety_assessment.py
reunity_ai_model/rag/: __init__.py  indexer.py
reunity_ai_model/regime/: regime_controller.py
scripts/: data_make_sample.py  run_real_simulations.py  run_sim_tests.py
src/reunity/: __init__.py
src/reunity/api/: __init__.py  endpoints_extended.py  main.py
src/reunity/clinician/: __init__.py  caregiver_interface.py
src/reunity/conditions/: __init__.py  support.py
src/reunity/core/: free_energy.py
src/reunity/crypto/: __init__.py  quantum_resistant.py
src/reunity/export/: portability.py
src/reunity/grounding/: __init__.py
src/reunity/memory/: __init__.py  continuity_store.py
src/reunity/prerag/: __init__.py  evidence_gate.py
src/reunity/protective/: __init__.py
src/reunity/rag/: chunker.py  retriever.py
src/reunity/reflection/: mirror_link.py
src/reunity/router/: state_router.py
src/reunity/storage/: __init__.py  encrypted_store.py
tests/: conftest.py  test_entropy.py  test_integration.py  test_memory.py  test_regime.py
